--- a/POO_MemoriaArrayListas/POO_MemoriaArrayListas/POO_MemoriaArrayListas.csproj
+++ b/POO_MemoriaArrayListas/POO_MemoriaArrayListas/POO_MemoriaArrayListas.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <StartupObject>POO_MemoriaArrayListas._71_Exercicio_Vetor</StartupObject>
   </PropertyGroup>
 
 </Project>
