--- a/POO_MemoriaArrayListas/POO_MemoriaArrayListas/POO_MemoriaArrayListas.csproj
+++ b/POO_MemoriaArrayListas/POO_MemoriaArrayListas/POO_MemoriaArrayListas.csproj
@@ -1,11 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <StartupObject>POO_MemoriaArrayListas._71_Exercicio_Vetor</StartupObject>
+    <StartupObject>POO_MemoriaArrayListas._73_ModifDeParamRefEOut</StartupObject>
   </PropertyGroup>
 
 </Project>
