Exercício de Enumeração parte 1

--- a/POO_Enumerações_Composição/POO_Enumerações_Composição/POO_Enumerações_Composição.csproj
+++ b/POO_Enumerações_Composição/POO_Enumerações_Composição/POO_Enumerações_Composição.csproj
@@ -43,6 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="124_Enumeracoes.cs" />
+    <Compile Include="124_Entities\Enums\OrderStatus.cs" />
+    <Compile Include="124_Entities\Order.cs" />
+    <Compile Include="Entities\Department.cs" />
+    <Compile Include="Entities\Enums\WorkerLevel.cs" />
+    <Compile Include="Entities\HourContract.cs" />
+    <Compile Include="Entities\Worker.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
