--- a/POO_Herança_Polimorfismo/POO_Herança_Polimorfismo/POO_Herança_Polimorfismo.csproj
+++ b/POO_Herança_Polimorfismo/POO_Herança_Polimorfismo/POO_Herança_Polimorfismo.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
+    <StartupObject>POO_Herança_Polimorfismo._135.Run</StartupObject>
   </PropertyGroup>
 
 </Project>
