--- a/POO_Herança_Polimorfismo/POO_Herança_Polimorfismo/POO_Herança_Polimorfismo.csproj
+++ b/POO_Herança_Polimorfismo/POO_Herança_Polimorfismo/POO_Herança_Polimorfismo.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
-    <StartupObject>POO_Herança_Polimorfismo._137_Sobreposicao.Run</StartupObject>
+    <StartupObject>POO_Herança_Polimorfismo._140_Exercicio.Run</StartupObject>
   </PropertyGroup>
 
 </Project>
